Improve code readability, fix bugs, and enhance UX/UI

--- a/docs/style/style.css
+++ b/docs/style/style.css
@@ -121,6 +121,7 @@ body {
   height: 100vh;
   left: 0;
   top: 0;
+  z-index: 98;
   background-color: rgba(0, 0, 0, 0.672);
   color: white;
   display: flex;
@@ -348,14 +349,15 @@ body {
   padding: 10px 15px;
   border-radius: 15px;
   border: 1px solid black;
+  background-color: black;
+  color: white;
   text-align: center;
   cursor: pointer;
   transition: 0.3s ease-in-out;
 }
-.contact .contactContainer .form-wrapper .form .btnEffectHover {
-  background-color: black;
-  color: white;
-  cursor: pointer;
+.contact .contactContainer .form-wrapper .formBtnEffect {
+  background-color: #90EE90;
+  border: #90EE90 1px solid;
 }
 .contact .contactContainer .form-wrapper .emailSentWRapper {
   height: 0%;
@@ -612,8 +614,9 @@ body {
   }
   .contact .contactContainer .form-wrapper .form--btn {
     position: absolute;
-    bottom: 35px;
+    bottom: 55px;
     left: 6px;
     width: 215px;
+    transition: 0.3s ease-in-out;
   }
 }/*# sourceMappingURL=style.css.map */
